--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_below="@id/container_toolbar" />
+            android:layout_below="@id/container_toolbar"
+            android:layout_gravity="right|left" />
 
     </RelativeLayout>
 
