--- a/app/src/main/res/layout/listitem_device_type.xml
+++ b/app/src/main/res/layout/listitem_device_type.xml
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/Ripple"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/space_edge">
 
+    <ImageView
+        android:id="@+id/show_context_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:contentDescription="@string/empty"
+        android:src="@drawable/ic_more_vert_black_24dp"
+        android:tint="@android:color/primary_text_light" />
+
     <TextView
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@id/show_context_menu"
+        android:layout_toStartOf="@id/show_context_menu"
+        android:textColor="@android:color/primary_text_light"
         android:textSize="18sp"
         android:textStyle="bold" />
 
-</FrameLayout>
+</RelativeLayout>
