--- a/app/src/main/res/layout/listitem_summary.xml
+++ b/app/src/main/res/layout/listitem_summary.xml
@@ -1,24 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:layout_marginBottom="@dimen/space_16dp"
+    card_view:cardCornerRadius="@dimen/cardview_default_radius">
 
-    <TextView
-        style="@style/TextAppearance.AppCompat.Headline"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Газ, м3" />
+        android:orientation="vertical"
+        android:padding="@dimen/space_16dp">
 
-    <TextView
-        style="@style/TextAppearance.AppCompat.Body1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="21.12.2016 1000" />
+        <TextView
+            style="@style/TextAppearance.AppCompat.Headline"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Газ, м3" />
 
-    <TextView
-        style="@style/TextAppearance.AppCompat.Body1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Всего 992244" />
+        <TextView
+            style="@style/TextAppearance.AppCompat.Body1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="21.12.2016 1000" />
+
+        <TextView
+            style="@style/TextAppearance.AppCompat.Body1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Всего 992244" />
+
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
