--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,26 @@
         <item name="android:background">?android:attr/selectableItemBackground</item>
     </style>
 
+    <style name="ImageView" />
+
+    <style name="ImageView.More">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:src">@drawable/ic_more_vert_black_24dp</item>
+        <item name="android:tint">@color/text_ordinary</item>
+    </style>
+
+    <style name="TextView" />
+
+    <style name="TextView.Ordinary">
+        <item name="android:textColor">@color/text_ordinary</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="Root">
+        <item name="android:background">@color/background</item>
+        <item name="android:padding">@dimen/space_16dp</item>
+    </style>
+
 </resources>
