--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,10 +38,10 @@
 
     <android.support.design.widget.NavigationView
         android:id="@+id/navigation_view"
-        android:layout_width="240dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:menu="@menu/menu_main"
+        android:layout_gravity="start"
         app:headerLayout="@layout/layout_menu_header"
-        android:layout_gravity="start" />
+        app:menu="@menu/menu_main" />
 
 </android.support.v4.widget.DrawerLayout>
