--- a/app/src/main/res/menu/menu_context_device.xml
+++ b/app/src/main/res/menu/menu_context_device.xml
@@ -7,6 +7,7 @@
 
     <item
         android:id="@+id/menu_edit"
+        android:icon="@drawable/ic_mode_edit_black_24dp"
         android:title="@string/menu_edit" />
 
     <item
