--- a/app/src/main/res/layout/fragment_device_view.xml
+++ b/app/src/main/res/layout/fragment_device_view.xml
@@ -4,12 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/layout_toolbar" />
-
-    <FrameLayout
-        android:id="@+id/container_content"
+    <TextView
+        android:id="@+id/device_name"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="@dimen/space_16dp" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
