--- a/app/src/main/res/layout/listitem_device_type.xml
+++ b/app/src/main/res/layout/listitem_device_type.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/type_root"
     style="@style/Ripple"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/space_16dp">
 
     <ImageView
-        android:id="@+id/show_context_menu"
+        android:id="@+id/type_context"
         style="@style/ImageView.More"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:contentDescription="@string/empty" />
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/type_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@id/show_context_menu"
-        android:layout_toStartOf="@id/show_context_menu"
+        android:layout_toLeftOf="@id/type_context"
+        android:layout_toStartOf="@id/type_context"
         android:textColor="@android:color/primary_text_light"
         android:textSize="18sp"
         android:textStyle="bold" />
