--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="space_0dp">0dp</dimen>
     <dimen name="space_16dp">16dp</dimen>
+    <dimen name="header_height">150dp</dimen>
 </resources>
