--- a/app/src/main/res/layout/listitem_summary.xml
+++ b/app/src/main/res/layout/listitem_summary.xml
@@ -14,22 +14,21 @@
         android:padding="@dimen/space_16dp">
 
         <TextView
-            style="@style/TextAppearance.AppCompat.Headline"
-            android:layout_width="match_parent"
+            android:id="@+id/device_name"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Газ, м3" />
+            android:text="Medium Text"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
-            style="@style/TextAppearance.AppCompat.Body1"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="21.12.2016 1000" />
+            android:text="@string/summary_last_date" />
 
         <TextView
-            style="@style/TextAppearance.AppCompat.Body1"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Всего 992244" />
+            android:text="@string/summary_last_value" />
 
     </LinearLayout>
 
