--- a/app/src/main/res/layout/fragment_metering_edit.xml
+++ b/app/src/main/res/layout/fragment_metering_edit.xml
@@ -22,6 +22,7 @@
 
     <Spinner
         android:id="@+id/device"
+        style="?android:spinnerStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
